--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -22,6 +22,27 @@ h1 {
 
 }
 
+#jogo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.grid {
+    background-color: aquamarine;
+    display: grid;
+    place-items: center;
+    grid-template-columns: repeat(5, 50px);
+    grid-template-rows: repeat(6, 50px);
+    gap: 10px;
+}
+
+.grid-item {
+    width: 50px;
+    height: 50px;
+    border: 2px solid rgb(0, 0, 0);
+}
+
 .como-jogar:hover, .config:hover{
     cursor: pointer;
     font-size: 130%;
