--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,16 +1,24 @@
 body {
-    background-color: #789DBC;
+    background-color: #967652;
     display: grid;
     place-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 h1 {
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
+    font-size: 36px;
 }
 
 #programa-principal {
-    background-color: white;
+    background-color: #e6d7c7;
+    padding: 0px 20px;
+    border-radius: 15px;
+    margin: 1.5%;
+    box-shadow: 2px 2px 4px;
 }
 
 #header {
@@ -18,31 +26,76 @@ h1 {
     align-items: center;
     justify-content: space-around;
     border-bottom: 1px solid;
-    border-bottom-color: rgb(202, 202, 202);
+    border-bottom-color: #967652;
 }
 
 #jogo {
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 80px 0px 70px 0px;
+}
+
+.fa-solid {
+    color: #593710;
 }
 
 .grid {
-    background-color: aquamarine;
     display: grid;
     place-items: center;
     grid-template-columns: repeat(5, 50px);
     grid-template-rows: repeat(6, 50px);
-    gap: 10px;
+    gap: 24px;
 }
 
 .grid-item {
-    width: 50px;
-    height: 50px;
+    width: 65px;
+    height: 65px;
     border: 2px solid rgb(0, 0, 0);
 }
 
 .como-jogar:hover, .config:hover{
     cursor: pointer;
     font-size: 130%;
+}
+
+
+
+/* Criando o teclado */
+
+#teclado {
+    font-family: arial;
+    display: grid;
+    gap: 4px;
+    margin-bottom: 20px;
+}
+
+.row {
+    display: flex;
+    justify-content: center;
+    gap: 3px;
+}
+
+.key {
+    background-color: #000000a1;
+    color: rgb(255, 255, 255);
+    font-size: 1.2rem;
+    font-weight: bold;
+    width: 50px;
+    height: 55px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 3px;
+    cursor: pointer;
+    transition: background-color 0.2s;
+}
+
+.key:hover {
+    background-color: #6d646b;
+}
+
+/* Teclas maiores (Backspace e Enter) */
+.key.wide {
+    width: 80px;
 }
