--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -99,3 +99,71 @@ h1 {
 .key.wide {
     width: 80px;
 }
+
+
+
+/* RESPONSIVIDADE */
+
+@media (max-width: 768px) {
+    #programa-principal {
+        padding: 10px;
+        margin: 2%;
+    }
+
+    h1 {
+        font-size: 28px;
+    }
+
+    .grid {
+        grid-template-columns: repeat(5, 40px);
+        grid-template-rows: repeat(6, 40px);
+        gap: 20px;
+    }
+
+    .grid-item {
+        width: 50px;
+        height: 50px;
+    }
+
+    .key {
+        width: 40px;
+        height: 45px;
+        font-size: 1rem;
+    }
+
+    .key.wide {
+        width: 70px;
+    }
+}
+
+@media (max-width: 480px) {
+
+    .como-jogar, .config {
+        margin: 5px 0;
+    }
+
+    h1 {
+        font-size: 24px;
+    }
+
+    .grid {
+        grid-template-columns: repeat(5, 35px);
+        grid-template-rows: repeat(6, 35px);
+        gap: 15px;
+    }
+
+    .grid-item {
+        width: 40px;
+        height: 40px;
+    }
+
+    .key {
+        width: 35px;
+        height: 40px;
+        font-size: 0.9rem;
+    }
+
+    .key.wide {
+        width: 60px;
+    }
+}
