--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -52,6 +52,14 @@ h1 {
     width: 65px;
     height: 65px;
     border: 2px solid rgb(0, 0, 0);
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    font-size: 50px;
+    font-family: "Archivo Black", sans-serif;
+    font-weight: 100;
 }
 
 .como-jogar:hover, .config:hover{
