--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -58,8 +58,13 @@ h1 {
     align-items: center;
 
     font-size: 50px;
-    font-family: "Archivo Black", sans-serif;
-    font-weight: 100;
+    font-family: "Anton SC", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
+.disabled {
+    background-color: rgb(0, 0, 0, 0.5) ; 
 }
 
 .como-jogar:hover, .config:hover{
