--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -34,10 +34,29 @@ h1 {
     justify-content: center;
     align-items: center;
     padding: 80px 0px 65px 0px;
+    position: relative;
 }
 
 .fa-solid {
     color: #593710;
+}
+
+.palavra-nao-encontrada {
+    background-color: #F72C5B;
+    color: white;
+
+    font-family: "Maven Pro", serif;
+    font-optical-sizing: auto;
+    font-weight: 500;
+    font-size: 110%;
+    font-style: normal;
+
+    max-width: fit-content;
+    position: absolute;
+    padding: 0px 10px;
+    border-radius: 25px;    
+
+    top: 0.35em;
 }
 
 .grid {
