--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -41,8 +41,7 @@ h1 {
     color: #593710;
 }
 
-.palavra-nao-encontrada {
-    background-color: #F72C5B;
+.feedback {
     color: white;
 
     font-family: "Maven Pro", serif;
@@ -54,7 +53,9 @@ h1 {
     max-width: fit-content;
     position: absolute;
     padding: 0px 10px;
-    border-radius: 25px;    
+    border-radius: 25px;
+    
+    visibility: hidden;
 
     top: 0.35em;
 }
