--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -52,12 +52,26 @@ h1 {
 
     max-width: fit-content;
     position: absolute;
+    top: 0.35em;
     padding: 0px 10px;
     border-radius: 25px;
     
     visibility: hidden;
+    animation: none;
+}
 
-    top: 0.35em;
+@keyframes shake {
+    0% {transform: translateX(10px)}
+    10% {transform: translateX(-10px)}
+    20% {transform: translateX(10px)}
+    30% {transform: translateX(-10px)}
+    40% {transform: translateX(10px)}
+    50% {transform: translateX(-10px)}
+    60% {transform: translateX(10px)}
+    70% {transform: translateX(-10px)}
+    80% {transform: translateX(10px)}
+    90% {transform: translateX(-10px)}
+    100% {transform: translateX(10px)}
 }
 
 .grid {
