Adicionando animação de zoom-out

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -74,6 +74,11 @@ h1 {
     100% {transform: translateX(10px)}
 }
 
+@keyframes zoomOut {
+    0% {scale: 100%}
+    100% {scale: 0%}
+}
+
 .grid {
     display: grid;
     place-items: center;
