--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -74,16 +74,6 @@ h1 {
     100% {transform: translateX(10px)}
 }
 
-@keyframes zoomOut {
-    0% {scale: 100%}
-    100% {scale: 0%}
-}
-
-@keyframes zoomIn {
-    0% {scale: 0%}
-    50% {scale: 150%}
-    100% {scale: 100%}
-}
 
 .grid {
     display: grid;
@@ -134,6 +124,100 @@ h1 {
     cursor: pointer;
     font-size: 130%;
 }
+
+
+/* Seção do Menu (Instruções, Configurações e Película*/
+
+.menu-pelicula {
+    width: 100%;
+    height: 100%;
+    background-color: rgb(0, 0, 0, 0.3);
+    position: absolute;
+    visibility: hidden;
+}
+
+.instrucoes, .configuracoes {
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.9);
+    color: white;
+    height: 100%;
+    width: 100%;
+    visibility: hidden;
+    border-radius: 20px;
+}
+
+.instrucoes-header, .configuracoes-header {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    font-family: arial;
+}
+
+.instrucoes-header p, .configuracoes-header p {
+    position: absolute;
+    top: -10px;
+    right: 17px;
+    font-size: x-large;
+    cursor: pointer;
+    transition: all 0.5ms ease;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+.instrucoes-header p:hover, .configuracoes-header p:hover {
+    scale: 140%;
+    color: red;
+}
+
+.instrucoes-body {
+    margin: 1.5rem;
+    font-size: 110%;
+    height: fit-content;
+
+}
+
+.instrucoes-body p {
+    font-family: arial;
+}
+
+.instrucoes-body ul {
+    position: relative;
+    right: 44px;
+    font-family: arial;
+    list-style-type: none;
+    display: flex;
+    width: fit-content;
+}
+
+.instrucoes-body li {
+    display: flex;
+    justify-content: center;
+    font-size: 120%;
+    align-items: center;
+    margin: 0px 5px; 
+    width: 40px;
+    height: 40px;
+    border: solid white 1px;
+}
+
+.instrucoes-p-final {
+    text-align: center;
+}
+
+.exemplos {
+    position: relative;
+    bottom: 35px;
+}
+
+.exemplo-letra-verde {
+    background-color: #3aa394;
+}
+
+.exemplo-letra-amarela {
+    background-color: #d3ad69;
+}
+
+
+/* fim Seção de Instruções */
 
 
 /* Criando o teclado */
@@ -227,6 +311,15 @@ h1 {
     .key.wide {
         width: 70px;
     }
+
+    .instrucoes {
+        height: 120%;
+    }
+
+    .instrucoes-p-final {
+        position: relative;
+        bottom: 25px;
+    }
 }
 
 @media (max-width: 480px) {
@@ -258,5 +351,15 @@ h1 {
 
     .key.wide {
         width: 60px;
+    }
+
+    .instrucoes {
+        height: 150%;
+        top: 1px;
+    }
+
+    .instrucoes-p-final {
+        position: relative;
+        bottom: 25px;
     }
 }
