--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,66 +1,242 @@
-body {
-    background-color: #967652;
-    display: grid;
-    place-items: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+/* SEÇÃO DO MENU - INSTRUÇÕES, CONFIGURAÇÕES E PELÍCULA */
+.menu-pelicula
+{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    visibility: hidden;
+    z-index: 1;
+    background-color: #42487481;
 }
 
-h1 {
-    text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 36px;
-}
 
-#programa-principal {
-    background-color: #e6d7c7;
-    padding: 0px 20px;
+.janela-menu
+{
+    background-color: #424874;
+    color:#F4EEFF;
+    position: absolute;
+    top: 10px;
+    width: 40%;
     border-radius: 15px;
-    margin: 0.5%;
-    box-shadow: 2px 2px 4px;
+    padding: 0px 15px;
+    visibility: hidden;
+    z-index: 2;
 }
 
-#header {
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    border-bottom: 1px solid;
-    border-bottom-color: #967652;
+
+@media (min-width: 1200px)
+{
+    .janela-menu
+    {
+        width: 20%;
+    }
 }
 
-#jogo {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 80px 0px 65px 0px;
+
+.janela-menu-header
+{   
     position: relative;
+    justify-content: space-around!important;
 }
 
-.fa-solid {
-    color: #593710;
-}
 
-.feedback {
+.janela-menu-body li
+{
+    width: 40px;
+    height: 40px;
+    font-size: 22px;
+    color: #A6B1E1;
+    margin: 0 0.5%;
+}
+/* FIM SEÇÃO DO MENU - INSTRUÇÕES, CONFIGURAÇÕES E PELÍCULA */
+
+
+
+
+/*SEÇÃO DOS ELEMENTOS DE FEEDBACK */
+.feedback
+{
     color: white;
-
     font-family: "Maven Pro", serif;
     font-optical-sizing: auto;
     font-weight: 500;
     font-size: 110%;
     font-style: normal;
-
     max-width: fit-content;
     position: absolute;
-    top: 0.35em;
+    top: 3em;
     padding: 0px 10px;
     border-radius: 25px;
-    
     visibility: hidden;
     animation: none;
 }
+/*FIM DA SEÇÃO DOS ELEMENTOS DE FEEDBACK*/
 
-@keyframes shake {
+
+
+
+/* SEÇÃO DOS ELEMENTOS PRINCIPAIS DO JOGO - CABEÇALHO, GRIDS E TECLADO VIRTUAL */
+body, html
+{
+    height: 100%;
+    width: 100%;
+    background-color: #F4EEFF;
+    color: #424874;
+    margin: 0;
+    padding: 0;
+    border: none;
+    font-family: arial;
+    position: relative;
+    z-index: 0;
+}
+
+
+ul, .icone 
+{
+    list-style: none;
+    padding: 0;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+
+li
+{
+    width: 70px;
+    height: 70px;
+    border: 2px solid #A6B1E1;
+    border-radius: 10px;
+    margin: 0 1%;
+    font-size: 38px;
+    font-weight: bold;
+    color: #424874;
+}
+
+
+.principal
+{
+    position: relative;
+    bottom: 17px;
+    flex-direction: column;
+    width: 60%;
+}
+
+
+.header
+{
+    width: 100%;
+    justify-content: space-between !important;
+}
+
+
+.icone:hover
+{
+    scale: 140%;
+    cursor: pointer;
+    transition: scale 0.2s ease;
+}
+
+
+.jogo
+{
+    margin: 30px 0px 20px 0px;
+}
+
+
+.teclado-virtual
+{
+    margin: 5px;
+    gap: 5px;
+}
+
+
+.tecla
+{
+    margin: 0;
+    background-color: #424874;
+    color: #F4EEFF;
+    border: 1px solid #424874;
+    border-radius: 7px;
+    height: 60px;
+    font-size: 32px;
+    max-width: 55px;
+}
+
+
+.tecla:hover, tecla:focus
+{
+    scale: 120%;
+    cursor: pointer;
+    background-color: #F4EEFF;
+    color: #424874;
+    border: 1px solid #424874;
+    transition: all 0.3s ease;
+}
+
+
+.tecla-enter
+{
+    width: 130px;
+    max-width: 130px;
+}
+
+
+.tecla-backspace
+{
+    max-width: 70px;
+}
+/* FIM SEÇÃO DOS ELEMENTOS PRINCIPAIS DO JOGO - CABEÇALHO, GRIDS E TECLADO VIRTUAL */
+
+
+
+
+/* ELEMENTOS VISUAIS DO JOGO */
+.opacity50
+{
+    opacity: 0.5;
+}
+
+
+.disabled
+{
+    background-color: #A6B1E1; 
+}
+
+
+.right-position
+{
+    background-color: #61C0BF;
+    color: white!important;
+    border: 2px solid #61C0BF;
+}
+
+
+.wrong-position
+{
+    background-color: #FFDE7D;
+    color: white!important;
+    border: 2px solid #FFDE7D;
+}
+
+
+.flexbox
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+/* FIM ELEMENTOS VISUAIS DO JOGO */
+
+
+
+
+/* ANIMAÇÕES */
+@keyframes shake
+{
     0% {transform: translateX(10px)}
     10% {transform: translateX(-10px)}
     20% {transform: translateX(10px)}
@@ -75,291 +251,25 @@ h1 {
 }
 
 
-.grid {
-    display: grid;
-    place-items: center;
-    grid-template-columns: repeat(5, 50px);
-    grid-template-rows: repeat(6, 50px);
-    gap: 31px;
-}
-
-.grid-item {
-    width: 65px;
-    height: 65px;
-    border: 2px solid rgb(0, 0, 0);
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    font-size: 50px;
-    font-family: "Anton SC", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-
-    animation: none;
-}
-
-@keyframes zoomGridEnter {
+@keyframes zoomGridEnter
+{
     0% {scale: 0%}
     50% {scale: 110%}
     100% {scale: 100%}
 }
 
-@keyframes zoomGridDelete {
+
+@keyframes zoomGridDelete
+{
     0% {scale: 0%}
     50% {scale: 110%}
     100% {scale: 100%}
 }
 
-@keyframes flipAnimation {
-    0% {rotate: y 360deg;}
+
+@keyframes flipAnimation
+{
+    0% {transform: rotateY(0deg);}
+    100% {transform: rotateY(360deg);}
 }
-
-.disabled {
-    background-color: rgb(0, 0, 0, 0.5) ; 
-}
-
-.como-jogar:hover, .config:hover{
-    cursor: pointer;
-    font-size: 130%;
-}
-
-
-/* Seção do Menu (Instruções, Configurações e Película*/
-
-.menu-pelicula {
-    width: 100%;
-    height: 100%;
-    background-color: rgb(0, 0, 0, 0.3);
-    position: absolute;
-    visibility: hidden;
-}
-
-.instrucoes, .configuracoes {
-    position: absolute;
-    background-color: rgba(0, 0, 0, 0.9);
-    color: white;
-    height: 100%;
-    width: 100%;
-    visibility: hidden;
-    border-radius: 20px;
-}
-
-.instrucoes-header, .configuracoes-header {
-    position: relative;
-    display: flex;
-    justify-content: center;
-    font-family: arial;
-}
-
-.instrucoes-header p, .configuracoes-header p {
-    position: absolute;
-    top: -10px;
-    right: 17px;
-    font-size: x-large;
-    cursor: pointer;
-    transition: all 0.5ms ease;
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-}
-
-.instrucoes-header p:hover, .configuracoes-header p:hover {
-    scale: 140%;
-    color: red;
-}
-
-.instrucoes-body {
-    margin: 1.5rem;
-    font-size: 110%;
-    height: fit-content;
-
-}
-
-.instrucoes-body p {
-    font-family: arial;
-}
-
-.instrucoes-body ul {
-    position: relative;
-    right: 44px;
-    font-family: arial;
-    list-style-type: none;
-    display: flex;
-    width: fit-content;
-}
-
-.instrucoes-body li {
-    display: flex;
-    justify-content: center;
-    font-size: 120%;
-    align-items: center;
-    margin: 0px 5px; 
-    width: 40px;
-    height: 40px;
-    border: solid white 1px;
-}
-
-.instrucoes-p-final {
-    text-align: center;
-}
-
-.exemplos {
-    position: relative;
-    bottom: 35px;
-}
-
-.exemplo-letra-verde {
-    background-color: #3aa394;
-}
-
-.exemplo-letra-amarela {
-    background-color: #d3ad69;
-}
-
-
-/* fim Seção de Instruções */
-
-
-/* Criando o teclado */
-
-#teclado {
-    font-family: arial;
-    display: grid;
-    gap: 4px;
-    margin-bottom: 20px;
-}
-
-.row {
-    display: flex;
-    justify-content: center;
-    gap: 3px;
-}
-
-.key {
-    background-color: #000000a1;
-    color: rgb(255, 255, 255);
-    font-size: 1.2rem;
-    font-weight: bold;
-    width: 50px;
-    height: 55px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 3px;
-    cursor: pointer;
-    transition: background-color 0.2s;
-}
-
-.key:hover {
-    background-color: #6d646b;
-}
-
-/* Teclas maiores (Backspace e Enter) */
-.key.wide {
-    width: 80px;
-}
-
-
-/* ELEMENTOS VISUAIS DO JOGO */
-.right-position {
-    /* Se o jogador acertar a posição da letra */
-    background-color: #3aa394;
-}
-
-.wrong-position {
-    /* Se o jogador errar a posição da letra */
-    background-color: #d3ad69;
-}
-
-.opacity50 {
-    opacity: 50%;
-}
-
-
-
-
-
-/* RESPONSIVIDADE */
-
-@media (max-width: 768px) {
-    #programa-principal {
-        padding: 10px;
-        margin: 2%;
-    }
-
-    h1 {
-        font-size: 28px;
-    }
-
-    .grid {
-        grid-template-columns: repeat(5, 40px);
-        grid-template-rows: repeat(6, 40px);
-        gap: 20px;
-    }
-
-    .grid-item {
-        width: 50px;
-        height: 50px;
-    }
-
-    .key {
-        width: 40px;
-        height: 45px;
-        font-size: 1rem;
-    }
-
-    .key.wide {
-        width: 70px;
-    }
-
-    .instrucoes {
-        height: 120%;
-    }
-
-    .instrucoes-p-final {
-        position: relative;
-        bottom: 25px;
-    }
-}
-
-@media (max-width: 480px) {
-
-    .como-jogar, .config {
-        margin: 5px 0;
-    }
-
-    h1 {
-        font-size: 24px;
-    }
-
-    .grid {
-        grid-template-columns: repeat(5, 35px);
-        grid-template-rows: repeat(6, 35px);
-        gap: 15px;
-    }
-
-    .grid-item {
-        width: 40px;
-        height: 40px;
-    }
-
-    .key {
-        width: 35px;
-        height: 40px;
-        font-size: 0.9rem;
-    }
-
-    .key.wide {
-        width: 60px;
-    }
-
-    .instrucoes {
-        height: 150%;
-        top: 1px;
-    }
-
-    .instrucoes-p-final {
-        position: relative;
-        bottom: 25px;
-    }
-}
+/* FIM ANIMAÇÕES */
