--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -88,19 +88,19 @@ body, html
     font-family: arial;
     position: relative;
     z-index: 0;
-}
-
-
-ul, .icone 
-{
-    list-style: none;
-    padding: 0;
     -webkit-touch-callout: none;
     -webkit-user-select: none;
     -khtml-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
+}
+
+
+ul
+{
+    list-style: none;
+    padding: 0;
 }
 
 
@@ -251,7 +251,7 @@ li
 }
 
 
-@keyframes zoomGridEnter
+@keyframes zoomGridEnter  /* Chamado quando o jogador digita algo na tela */
 {
     0% {scale: 0%}
     50% {scale: 110%}
@@ -259,7 +259,7 @@ li
 }
 
 
-@keyframes zoomGridDelete
+@keyframes zoomGridDelete  /* Chamado quando o jogador apaga algo na tela --> Possui o mesmo código de zoomGridEnter, pois é mais fácil reiniciar a animação via JS dessa forma do que usar setTimeOut para reiniciá-las com o tempo */
 {
     0% {scale: 0%}
     50% {scale: 110%}
