--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -64,7 +64,7 @@
     font-style: normal;
     max-width: fit-content;
     position: absolute;
-    top: 3em;
+    top: 2.5em;
     padding: 0px 10px;
     border-radius: 25px;
     visibility: hidden;
@@ -114,6 +114,19 @@ li
     font-size: 38px;
     font-weight: bold;
     color: #424874;
+}
+
+
+footer
+{
+    position: relative;
+    top: 17px;
+}
+
+
+footer p
+{
+    margin: 0 5px 0 0;
 }
 
 
