--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -346,7 +346,7 @@ footer p
     .tecla
     {
         font-size: 16px;
-        max-width: 30px;
+        max-width: 34px;
         height: 40px;
     }
 
@@ -357,6 +357,40 @@ footer p
         background-color: #424874;
         color: #F4EEFF;
         border: 1px solid #424874;
+    }
+
+
+    .tecla-enter
+    {
+        max-width: 64px;
+    }
+}
+
+
+@media (max-width: 380px)
+{
+    .tecla
+    {
+        font-size: 16px;
+        max-width: 32px;
+        height: 40px;
+    }
+
+
+    .tecla-enter
+    {
+        max-width: 64px;
+    }
+}
+
+
+@media (max-width: 360px)
+{
+    .tecla
+    {
+        font-size: 16px;
+        max-width: 30px;
+        height: 40px;
     }
 
 
