--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -79,6 +79,7 @@ body, html
     font-family: arial;
     position: relative;
     z-index: 0;
+    overflow: hidden;
     -webkit-touch-callout: none;
     -webkit-user-select: none;
     -khtml-user-select: none;
