--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -79,13 +79,13 @@ body, html
     font-family: arial;
     position: relative;
     z-index: 0;
-    overflow: hidden;
     -webkit-touch-callout: none;
     -webkit-user-select: none;
     -khtml-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
+    overflow: hidden;
 }
 
 
@@ -320,6 +320,12 @@ footer p
     .janela-menu, .principal
     {
         width: 90vw;
+    }
+
+
+    .principal
+    {
+        height: 100vh!important;
     }
 
 
