--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -77,7 +77,6 @@ body, html
     padding: 0;
     border: none;
     font-family: arial;
-    position: relative;
     z-index: 0;
     -webkit-touch-callout: none;
     -webkit-user-select: none;
@@ -109,6 +108,12 @@ li
 }
 
 
+footer
+{
+    margin-top: auto;
+}
+
+
 footer p, i
 {
     color: #A6B1E1;
@@ -122,11 +127,11 @@ footer p
 
 
 .principal
-{
-    position: relative;
-    bottom: 17px;
-    flex-direction: column;
+{    
     width: 60%;
+    height: 100%;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 
@@ -302,7 +307,7 @@ footer p
 
     footer
     {
-        bottom: 0;
+        margin: 0 0 auto 0;
         font-size: 12px;
     }
 
