--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -49,8 +49,8 @@ button:active
 .menu-pelicula
 {
     position: absolute;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     visibility: hidden;
     z-index: 1;
     background-color: #42487481;
